--- a/game/style.css
+++ b/game/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+     overflow: hidden;
     
 }
     #container {
@@ -15,7 +16,7 @@
     .char{
     position:absolute;
     bottom: 0px;
-    height: 70px;
+    height: 150px;
     object-fit: contain;
 }
    #character{
@@ -25,5 +26,5 @@
 }
 #character2{
     right:10px;
-    height: 65px;
+    height: 150px;
 }
