--- a/postr/style.css
+++ b/postr/style.css
@@ -12,12 +12,12 @@
 }
 
   .formdiv{
-      background-color: #f5f5f5;
     display: flex; 
+    width: fit-content;
     justify-content: center ;
     align-items: center;
-     height: 100vh;  
      /* width: 2000px; */
+     margin: 0 auto;
   }
 
   form {
@@ -26,7 +26,8 @@
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0,0,0,0.3);
     width: 600px;
-    
+    margin-top: 130px;
+
   }
 
   .form-header {
@@ -187,10 +188,10 @@ outline: none;
     transition: 1.5s;
 }
 .maincontent{
-  width: 500px;
+  /* width: 500px; */
   border: 1px solid rgb(231, 217, 217);
-  margin-left: 70px;
-  margin-top: 70px;
+  /* margin-left: 70px;
+  margin-top: 70px; */
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 20px;
