--- a/postr/style.css
+++ b/postr/style.css
@@ -1,204 +1,296 @@
 @font-face {
-    font-family: lobster;
-    src: url(./font/LobsterTwo-Regular.ttf);
+  font-family: lobster;
+  src: url(./font/LobsterTwo-Regular.ttf);
 }
+
 @font-face {
   font-family: dancing;
   src: url(./font/DancingScript-SemiBold.ttf);
 }
+
 @font-face {
   font-family: roboto;
   src: url(./font/Roboto_Condensed-SemiBoldItalic.ttf);
 }
 
-  .formdiv{
-    display: flex; 
-    width: fit-content;
-    justify-content: center ;
-    align-items: center;
-     /* width: 2000px; */
-     margin: 0 auto;
-  }
+body {
+ height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #2b1055, #7597de);
+  overflow: hidden;
+  position: relative;}
 
-  form {
-    background: #fff;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    width: 600px;
-    margin-top: 130px;
+  body.active::before {
 
-  }
-
-  .form-header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
-  }
-
-  .form-header img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin-right: 15px;
-  }
-
-  h1 {
-    font-size: 30px;
-    color: #111;
-    text-align: center;
-    margin: 0;
-  }
-
-  .form-row {
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
-    margin-bottom: 15px;
-  }
-
-  .form-row div {
-    flex: 1;
-  }
-
-  label {
-    font-family: lobster;
-    display: block;
-    font-weight: 500;
-    color: #222;
-    margin-bottom: 5px;
-    text-align: left;
-  }
-
-  input {
-    width: 240px;
-    height: 30px;
-    padding: 10px;
-    border: 1px solid hsl(0, 5%, 84%);
-    border-radius: 5px;
-    outline: none;
-     font-family:roboto;
-      font-size: 20px;
-color: #723535;
-
-  }
-  input:hover{
-    background-color: #eff1db;
-  }
-
-  input:focus {
-    border-color: #b7b0b0;
-    box-shadow: 0 0 3px #000 ;
-     font-family:roboto;
- color: #723535;
- font-size: 20px;
-
-  }
-
-  #signup {
-    background: #000;
-    color: #fff;
-    border: none;
-    padding: 14px;
-    border-radius: 7px;
-    cursor: pointer;
-    width: 200px;
-    font-size: 20px;
-    margin-top: 10px;
-    height: 60px;
-  }
-
-  #signup:hover {
-    transform: scale(1.1);
-    transition: 1.5s;
-  }
-.but{
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1500&q=80") 
+              no-repeat center center/cover;
+  filter: blur(18px) brightness(60%) saturate(120%);
+  transform: scale(1.1);
+  z-index: 0;
 }
-.mynav{
+
+
+.formdiv {
+
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 20px;
+  padding: 40px 50px;
+  width: 600px;
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  position: relative;}
+
+.form-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
+}
+
+.form-header img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+h1 {
+  font-size: 40px;
+  color: #111;
+  text-align: center;
+  margin: 0;
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+
+.form-row div {
+  flex: 1;
+}
+
+label {
+  font-family: lobster;
+  display: block;
+  font-weight: 500;
+  color: #222;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
+input {
+  width: 240px;
+  height: 30px;
+  padding: 10px;
+  border: 1px solid hsl(0, 5%, 84%);
+  border-radius: 5px;
+  outline: none;
+  font-family: roboto;
+  font-size: 20px;
+  color: #723535;
+}
+
+input:hover {
+  background-color: #eff1db;
+}
+
+input:focus {
+  border-color: #b7b0b0;
+  box-shadow: 0 0 3px #000;
+  font-family: roboto;
+  color: #110202;
+  font-size: 20px;
+}
+
+#signup {
+  background: #EEAECA;
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+  color: #fff;
+  border: none;
+  padding: 14px;
+  border-radius: 7px;
+  cursor: pointer;
+  width: 150px;
+  font-size: 20px;
+  margin-top: 10px;
+  height: 60px;
+}
+
+#signup:hover {
+  transform: scale(1.1);
+  transition: 1.5s;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.but {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.mynav {
   padding: 40px;
-  background-color:#868383;
+  background: #a8629d;
+  background: linear-gradient(90deg, rgba(168, 98, 157, 1) 0%, rgba(87, 199, 177, 1) 50%, rgba(237, 83, 232, 1) 100%);
 }
-.post{
+
+.post {
   color: #fff;
   font-size: 40px;
   font-weight: 700;
   font-family: dancing;
 
 }
-.maincontent{
+
+.maincontent {
   padding-left: 100px;
   padding-top: 90px;
 }
-#postinput{
+
+#postinput {
   width: 150px;
   height: 32px;
   margin-top: 10px;
 }
-#about{
-    margin-top: 10px;
-width: 300px;
-height: 130px;
-border-radius: 5px;
-    border: 1px solid hsl(0, 5%, 84%);
-     font-family:roboto;
-      font-size: 20px;
-color: #723535;
+
+#about {
+  margin-top: 10px;
+  width: 300px;
+  height: 130px;
+  border-radius: 5px;
+  border: 1px solid hsl(0, 5%, 84%);
+  font-family: roboto;
+  font-size: 20px;
+  color: #723535;
 
 }
-#about:focus{
-      border-color: #b7b0b0;
-    box-shadow: 0 0 3px #cac3c3 ;
-        background-color: #eff1db;
-outline: none;
- font-family:roboto;
- color: #723535;
- font-size: 20px;
+
+#about:focus {
+  border-color: #b7b0b0;
+  box-shadow: 0 0 3px #cac3c3;
+  background-color: #eff1db;
+  outline: none;
+  font-family: roboto;
+  color: #723535;
+  font-size: 20px;
 }
-.text{
+
+.text {
   padding: 20px;
   width: 150px;
 
 }
-.descrip{
+
+.descrip {
   padding: 20px;
   width: 350px;
 }
-.but1{
+
+.but1 {
   padding: 20px;
   width: 150px;
 }
-.but11{
-  background: #b4b4e9;
-    color: #000;
-    border: none;
-    padding: 14px;
-    border-radius: 7px;
-    cursor: pointer;
-    width: 100px;
-    font-size: 20px;
-    margin-top: 10px;
-    height: 60px;
+
+.but11 {
+  background: #a8629d;
+  background: linear-gradient(90deg, rgba(168, 98, 157, 1) 0%, rgba(87, 199, 177, 1) 100%, rgba(237, 83, 232, 1) 100%);
+  border: none;
+  padding: 14px;
+  border-radius: 7px;
+  cursor: pointer;
+  width: 100px;
+  font-size: 20px;
+  margin-top: 10px;
+  height: 60px;
 }
-.but11:hover{
-   transform: scale(1.1);
-    transition: 1.5s;
+
+.but11:hover {
+  transform: scale(1.1);
+  transition: 1.5s;
 }
-.maincontent{
+
+.maincontent {
   /* width: 500px; */
   border: 1px solid rgb(231, 217, 217);
   /* margin-left: 70px;
   margin-top: 70px; */
- box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 20px;
-  background-color: white;}
-.row{
+  background-color: white;
+}
+
+.row {
   width: 900px;
 }
-.postapp{
+
+.postapp {
   background-color: white;
+}
+
+.post2 {
+  height: 210px;
+  width: 600px;
+  margin-top: 50px;
+}
+
+.post1 {
+  margin-top: 40px;
+}
+
+.header1 {
+  margin: 10px;
+}
+
+.edit {
+  display: flex;
+  justify-content: end;
+  margin-right: 10px;
+}
+
+.edit1 {
+  margin-right: 10px;
+  background: #e0c2dc;
+  color: black;
+}
+
+.edit1:hover {
+  margin-right: 10px;
+  background: #e0c2dc;
+  transform: scale(1.1);
+  transition: 1.5s;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+
+}
+.edit2 {
+  margin-right: 10px;
+  background: #53ebeb;
+  color: black;
+}
+
+.edit2:hover {
+  margin-right: 10px;
+  background: #53ebeb;
+  transform: scale(1.1);
+  transition: 1.5s;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+
 }
